--- a/templates/main.html
+++ b/templates/main.html
@@ -65,10 +65,10 @@
           </div>
           <div class="modal-body">
             <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="Image Title" id="title-add-form" aria-label="title" required>
+                <input type="search" class="form-control" placeholder="Image Title" id="title-add-form" aria-label="title" required>
             </div>
-            <div class="input-group mb-3">
-                <input type="url" class="form-control" placeholder="URL" id="url-add-form" aria-label="url" required>
+            <div class="mb-3">
+                <input type="search" class="form-control" placeholder="https://www.example.com/image.png" id="url-add-form" aria-label="url" required>
             </div>
           </div>
           <div class="modal-footer">
@@ -103,7 +103,7 @@
 </div>
 
 
-<div class="toast-container position-fixed bottom-0 end-0 p-3">
+<div class="toast-container position-fixed bottom-0 end-0 p-3" style="z-index: 1000;">
 
     <!-- Image added toast -->
     <div id="imageAddToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
