--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
-
-    <script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-    <script src="{% static 'js/main.js' %}"></script>
     <title>QuickTures</title>
 </head>
 <body class="bg-light">
@@ -22,7 +18,10 @@
         {% include 'signup-login.html' %}
     {% endif %}
     
-
+    <script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'js/sweetalert2.all.min.js' %}"></script>
     <script src="{% static 'js/switch.js' %}"></script>
+    <script src="{% static 'js/main.js' %}"></script>
 </body>
 </html>
