--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.5.2.0.b1.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <title>QuickTures</title>
 </head>
@@ -19,7 +19,7 @@
     {% endif %}
     
     <script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.5.2.0.b1.bundle.min.js' %}"></script>
     <script src="{% static 'js/sweetalert2.all.min.js' %}"></script>
     <script src="{% static 'js/switch.js' %}"></script>
     <script src="{% static 'js/main.js' %}"></script>
