--- a/templates/main.html
+++ b/templates/main.html
@@ -18,13 +18,6 @@
             <label class="form-check-label" for="lightSwitch"></label>
             <input class="form-check-input" type="checkbox" id="lightSwitch"/>
         </div>
-        <!-- <div class="col-2 p-0 text-center">
-            <a class="btn btn-profile" href="#" role="button">
-                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
-                    <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
-                </svg>
-            </a>
-        </div> -->
     </div>
 
     <div class="container">
@@ -109,7 +102,7 @@
     </div>
 </div>
 
-
+<!-- Toasts -->
 <div class="toast-container position-fixed bottom-0 end-0 p-3" style="z-index: 1000;">
 
     <!-- Image added toast -->
@@ -127,7 +120,7 @@
     </div>
 
 
-    <!-- Image URL copied -->
+    <!-- Image URL copied toast -->
     <div id="imageCopyToast" class="toast hide bg-light" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-header bg-light">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="green" class="bi bi-file-earmark-check" viewBox="0 0 16 16">
@@ -158,6 +151,7 @@
     </div>
 </div>
 
+<!-- If images not found -->
 <script type="text/javascript">
 $( document ).ready(function() {
     $(".img-block").on("error", function(){
