add: api for all images

--- a/templates/main.html
+++ b/templates/main.html
@@ -19,7 +19,7 @@
             <input class="form-check-input" type="checkbox" id="lightSwitch"/>
         </div>
     </div>
-
+    <!-- <button class="btn btn-danger" id="testbtn">TEST</button> -->
     <div class="container">
         <div class="col-12 py-2">
             <a href="#modal-add" data-bs-toggle="modal" class="btn d-block h-100 w-100 btn-add">
